--- a/index.html
+++ b/index.html
@@ -82,32 +82,32 @@
       </p>
       <div class="row">
         <div class="menu-card">
-          <img src="img/menu/1.webp" alt="Espresso" class="menu-card-img" />
+          <img src="img/Menu/1.webp" alt="Espresso" class="menu-card-img" />
           <h3 class="menu-card-title">- Espresso -</h3>
           <p class="menu-card-prices">IDR 15K</p>
         </div>
         <div class="menu-card">
-          <img src="img/menu/1.webp" alt="Espresso" class="menu-card-img" />
+          <img src="img/Menu/1.webp" alt="Espresso" class="menu-card-img" />
           <h3 class="menu-card-title">- Espresso -</h3>
           <p class="menu-card-prices">IDR 15K</p>
         </div>
         <div class="menu-card">
-          <img src="img/menu/1.webp" alt="Espresso" class="menu-card-img" />
+          <img src="img/Menu/1.webp" alt="Espresso" class="menu-card-img" />
           <h3 class="menu-card-title">- Espresso -</h3>
           <p class="menu-card-prices">IDR 15K</p>
         </div>
         <div class="menu-card">
-          <img src="img/menu/1.webp" alt="Espresso" class="menu-card-img" />
+          <img src="img/Menu/1.webp" alt="Espresso" class="menu-card-img" />
           <h3 class="menu-card-title">- Espresso -</h3>
           <p class="menu-card-prices">IDR 15K</p>
         </div>
         <div class="menu-card">
-          <img src="img/menu/1.webp" alt="Espresso" class="menu-card-img" />
+          <img src="img/Menu/1.webp" alt="Espresso" class="menu-card-img" />
           <h3 class="menu-card-title">- Espresso -</h3>
           <p class="menu-card-prices">IDR 15K</p>
         </div>
         <div class="menu-card">
-          <img src="img/menu/1.webp" alt="Espresso" class="menu-card-img" />
+          <img src="img/Menu/1.webp" alt="Espresso" class="menu-card-img" />
           <h3 class="menu-card-title">- Espresso -</h3>
           <p class="menu-card-prices">IDR 15K /cup</p>
         </div>
