--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- navbar start -->
     <nav class="navbar">
       <!-- logo -->
-      <a href="#" class="navbar-logo">Kedai Kopi<span> Dhani</span></a>
+      <a href="#" class="navbar-logo">Kedai Kopi<span> Sharul</span></a>
       <!-- menu -->
       <div class="navbar-nav">
         <a href="#home">Home</a>
